[package]
name = "mcp_memory"
version = "0.1.1"
edition = "2021"
rust-version = "1.86"
description = "MCP Memory is a lightweight Model Context Protocol (MCP) server that stores a knowledge graph on disk and provides simple text search capabilities."
authors = ["LLMemory Team"]
license = "MIT"
repository = "https://github.com/aliev/mcp_memory"
homepage = "https://github.com/aliev/mcp_memory"
documentation = "https://github.com/aliev/mcp_memory#readme"
keywords = ["llm", "memory", "mcp", "knowledge-graph", "ai", "mcp_memory"]
categories = ["command-line-utilities", "api-bindings"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmcp = { version = "0.2.1", features = ["schemars"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
rayon = "1.8"

[dev-dependencies]
tempfile = "3.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bin]]
name = "mcp_memory"
path = "src/main.rs"
doc = false
